--- a/LiveMapDashboard.Web/Views/Shared/Components/RfcForm/Default.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/Components/RfcForm/Default.cshtml
@@ -96,7 +96,7 @@
             <input type="hidden" asp-for="CrudformViewModel.MapId" />
         </form>
 
-        <form method="post" asp-controller="rfc" asp-action="approvalSubmit">
+        <form method="post" asp-controller="rfc" asp-action="approvalSubmit" enctype="multipart/form-data">
             @Html.AntiForgeryToken()
             <div asp-validation-summary="ModelOnly" class="text-red-500 mb-4"></div>
 
@@ -108,7 +108,8 @@
             <input type="hidden" asp-for="CrudformViewModel.MapId" />
             <input type="hidden" id="Coordinate_Latitude" asp-for="CrudformViewModel.Coordinate.Latitude" />
             <input type="hidden" id="Coordinate_Longitude" asp-for="CrudformViewModel.Coordinate.Longitude" />
-
+            <input type="hidden" asp-for="CrudformViewModel.Image" />
+            
             <div>
                 <div class="mb-6 border border-blue-500 p-4 rounded-lg">
                     <div class="flex justify-between items-center">
@@ -148,19 +149,33 @@
                 </div>
 
                 <div class="mt-1 p-4 relative z-10 bg-white border border-gray-200 rounded-xl sm:mt-4 dark:bg-neutral-900 dark:border-neutral-700">
-                    @Html.EditorFor(m => m.CrudformViewModel.Image, new ViewDataDictionary(ViewData) {
-                        { "Label", "Image (URL)" },
-                        { "Value", Model.CrudformViewModel.Image }
-                    })
+                    <div class="group flex flex-col bg-white border border-gray-200 rounded-xl sm:mt-4 dark:bg-neutral-900 dark:border-neutral-700">
+                        <label for="imageUpload" class="flex flex-col items-center justify-center w-full cursor-pointer">
+                            <div class="flex flex-col items-center justify-center pt-5 pb-6">
+                                <svg class="w-8 h-8 mb-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 16">
+                                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2" />
+                                </svg>
+                                <p class="mb-2 text-sm text-gray-500 dark:text-gray-400 font-semibold">Click to upload</p>
+                            </div>
+                            <input id="imageUpload" name="CrudformViewModel.ImageFile" type="file" class="hidden" accept=".png, .jpg, .jpeg" />
+                        </label>
+                    </div>
 
                     <div class="flex justify-center">
                         <div id="previewImageLoader" class="animate-spin size-6 border-3 border-current border-t-transparent text-blue-600 rounded-full dark:text-blue-500 hidden" role="status" aria-label="loading">
                             <span class="sr-only">Loading...</span>
                         </div>
 
-                        <img id="previewImage" class="mt-2 w-full rounded-lg hidden" alt="POI main image"/>
+                        <img id="preview" class="mt-2 w-full rounded-lg hidden" alt="POI main image" />
                         <p id="imagePreviewError" class="text-sm text-yellow-800 mt-2 hidden">Image at URL does not exist.</p>
                     </div>
+
+                    @if (Model.CrudformViewModel.Image != null)
+                    {
+                        <p class="text-sm font-medium text-gray-700 block mb-1 dark:text-gray-200">Original Image</p>
+                        <img class="mt-2 w-full rounded-lg" src="@Model.CrudformViewModel.Image" />
+                    }
+
                 </div>
             
                 <div class="mt-1 p-4 relative z-10 bg-white border border-gray-200 rounded-xl sm:mt-4 dark:bg-neutral-900 dark:border-neutral-700">
@@ -213,6 +228,6 @@
             </div>
         </form>
     </div>
-    <script src="~/js/poi.js" asp-append-version="true" type="module"></script>
+    <script src="~/js/preview-image.js" asp-append-version="true" type="module"></script>
     <script src="~/js/rfc.js" asp-append-version="true" type="module"></script>
 }
