--- a/LiveMapDashboard.Web/Views/Shared/EditorTemplates/DateTime.cshtml
+++ b/LiveMapDashboard.Web/Views/Shared/EditorTemplates/DateTime.cshtml
@@ -21,7 +21,7 @@
            placeholder="@placeholder"
            class="border py-2.5 px-2 block w-full border-gray-200 rounded-lg sm:text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600" />
 
-    @if (ViewData.ModelState.TryGetValue(fieldName ?? "", out var entry) && entry.Errors.Count > 0)
+    @if (ViewData.ModelState.TryGetValue(fullFieldName ?? "", out var entry) && entry.Errors.Count > 0)
     {
         <span class="text-sm text-red-600 mt-2">@entry.Errors[0].ErrorMessage</span>
     }
